name:                  amazonka-medialive
version:               1.6.1
synopsis:              Amazon Elemental MediaLive SDK.
homepage:              https://github.com/brendanhay/amazonka
bug-reports:           https://github.com/brendanhay/amazonka/issues
license:               MPL-2.0
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay+amazonka@gmail.com>
copyright:             Copyright (c) 2013-2018 Brendan Hay
category:              Network, AWS, Cloud, Distributed Computing
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md fixture/*.yaml fixture/*.proto src/.gitkeep
description:
    The types from this library are intended to be used with
    <http://hackage.haskell.org/package/amazonka amazonka>, which provides
    mechanisms for specifying AuthN/AuthZ information, sending requests,
    and receiving responses.
    .
    Lenses are used for constructing and manipulating types,
    due to the depth of nesting of AWS types and transparency regarding
    de/serialisation into more palatable Haskell values.
    The provided lenses should be compatible with any of the major lens libraries
    such as <http://hackage.haskell.org/package/lens lens> or
    <http://hackage.haskell.org/package/lens-family-core lens-family-core>.
    .
    See "Network.AWS.MediaLive" or <https://aws.amazon.com/documentation/ the AWS documentation>
    to get started.

source-repository head
    type:              git
    location:          git://github.com/brendanhay/amazonka.git
    subdir:            amazonka-medialive

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:
        -Wall
        -fwarn-incomplete-uni-patterns
        -fwarn-incomplete-record-updates
        -funbox-strict-fields

    exposed-modules:
          Network.AWS.MediaLive
        , Network.AWS.MediaLive.CreateChannel
        , Network.AWS.MediaLive.CreateInput
        , Network.AWS.MediaLive.CreateInputSecurityGroup
        , Network.AWS.MediaLive.DeleteChannel
        , Network.AWS.MediaLive.DeleteInput
        , Network.AWS.MediaLive.DeleteInputSecurityGroup
        , Network.AWS.MediaLive.DescribeChannel
        , Network.AWS.MediaLive.DescribeInput
        , Network.AWS.MediaLive.DescribeInputSecurityGroup
        , Network.AWS.MediaLive.ListChannels
        , Network.AWS.MediaLive.ListInputSecurityGroups
        , Network.AWS.MediaLive.ListInputs
        , Network.AWS.MediaLive.StartChannel
        , Network.AWS.MediaLive.StopChannel
        , Network.AWS.MediaLive.Types
        , Network.AWS.MediaLive.UpdateChannel
        , Network.AWS.MediaLive.UpdateInput
        , Network.AWS.MediaLive.UpdateInputSecurityGroup
        , Network.AWS.MediaLive.Waiters

    other-modules:
          Network.AWS.MediaLive.Types.AacCodingMode
        , Network.AWS.MediaLive.Types.AacInputType
        , Network.AWS.MediaLive.Types.AacProfile
        , Network.AWS.MediaLive.Types.AacRateControlMode
        , Network.AWS.MediaLive.Types.AacRawFormat
        , Network.AWS.MediaLive.Types.AacSettings
        , Network.AWS.MediaLive.Types.AacSpec
        , Network.AWS.MediaLive.Types.AacVbrQuality
        , Network.AWS.MediaLive.Types.Ac3BitstreamMode
        , Network.AWS.MediaLive.Types.Ac3CodingMode
        , Network.AWS.MediaLive.Types.Ac3DrcProfile
        , Network.AWS.MediaLive.Types.Ac3LfeFilter
        , Network.AWS.MediaLive.Types.Ac3MetadataControl
        , Network.AWS.MediaLive.Types.Ac3Settings
        , Network.AWS.MediaLive.Types.AfdSignaling
        , Network.AWS.MediaLive.Types.ArchiveContainerSettings
        , Network.AWS.MediaLive.Types.ArchiveGroupSettings
        , Network.AWS.MediaLive.Types.ArchiveOutputSettings
        , Network.AWS.MediaLive.Types.AribDestinationSettings
        , Network.AWS.MediaLive.Types.AribSourceSettings
        , Network.AWS.MediaLive.Types.AudioChannelMapping
        , Network.AWS.MediaLive.Types.AudioCodecSettings
        , Network.AWS.MediaLive.Types.AudioDescription
        , Network.AWS.MediaLive.Types.AudioDescriptionAudioTypeControl
        , Network.AWS.MediaLive.Types.AudioDescriptionLanguageCodeControl
        , Network.AWS.MediaLive.Types.AudioLanguageSelection
        , Network.AWS.MediaLive.Types.AudioLanguageSelectionPolicy
        , Network.AWS.MediaLive.Types.AudioNormalizationAlgorithm
        , Network.AWS.MediaLive.Types.AudioNormalizationAlgorithmControl
        , Network.AWS.MediaLive.Types.AudioNormalizationSettings
        , Network.AWS.MediaLive.Types.AudioOnlyHlsSettings
        , Network.AWS.MediaLive.Types.AudioOnlyHlsTrackType
        , Network.AWS.MediaLive.Types.AudioPidSelection
        , Network.AWS.MediaLive.Types.AudioSelector
        , Network.AWS.MediaLive.Types.AudioSelectorSettings
        , Network.AWS.MediaLive.Types.AudioType
        , Network.AWS.MediaLive.Types.AuthenticationScheme
        , Network.AWS.MediaLive.Types.AvailBlanking
        , Network.AWS.MediaLive.Types.AvailBlankingState
        , Network.AWS.MediaLive.Types.AvailConfiguration
        , Network.AWS.MediaLive.Types.AvailSettings
        , Network.AWS.MediaLive.Types.BlackoutSlate
        , Network.AWS.MediaLive.Types.BlackoutSlateNetworkEndBlackout
        , Network.AWS.MediaLive.Types.BlackoutSlateState
        , Network.AWS.MediaLive.Types.BurnInAlignment
        , Network.AWS.MediaLive.Types.BurnInBackgroundColor
        , Network.AWS.MediaLive.Types.BurnInDestinationSettings
        , Network.AWS.MediaLive.Types.BurnInFontColor
        , Network.AWS.MediaLive.Types.BurnInOutlineColor
        , Network.AWS.MediaLive.Types.BurnInShadowColor
        , Network.AWS.MediaLive.Types.BurnInTeletextGridControl
        , Network.AWS.MediaLive.Types.CaptionDescription
        , Network.AWS.MediaLive.Types.CaptionDestinationSettings
        , Network.AWS.MediaLive.Types.CaptionLanguageMapping
        , Network.AWS.MediaLive.Types.CaptionSelector
        , Network.AWS.MediaLive.Types.CaptionSelectorSettings
        , Network.AWS.MediaLive.Types.Channel
        , Network.AWS.MediaLive.Types.ChannelEgressEndpoint
        , Network.AWS.MediaLive.Types.ChannelState
        , Network.AWS.MediaLive.Types.ChannelSummary
        , Network.AWS.MediaLive.Types.DvbNitSettings
        , Network.AWS.MediaLive.Types.DvbSdtOutputSdt
        , Network.AWS.MediaLive.Types.DvbSdtSettings
        , Network.AWS.MediaLive.Types.DvbSubDestinationAlignment
        , Network.AWS.MediaLive.Types.DvbSubDestinationBackgroundColor
        , Network.AWS.MediaLive.Types.DvbSubDestinationFontColor
        , Network.AWS.MediaLive.Types.DvbSubDestinationOutlineColor
        , Network.AWS.MediaLive.Types.DvbSubDestinationSettings
        , Network.AWS.MediaLive.Types.DvbSubDestinationShadowColor
        , Network.AWS.MediaLive.Types.DvbSubDestinationTeletextGridControl
        , Network.AWS.MediaLive.Types.DvbSubSourceSettings
        , Network.AWS.MediaLive.Types.DvbTdtSettings
        , Network.AWS.MediaLive.Types.Eac3AttenuationControl
        , Network.AWS.MediaLive.Types.Eac3BitstreamMode
        , Network.AWS.MediaLive.Types.Eac3CodingMode
        , Network.AWS.MediaLive.Types.Eac3DcFilter
        , Network.AWS.MediaLive.Types.Eac3DrcLine
        , Network.AWS.MediaLive.Types.Eac3DrcRf
        , Network.AWS.MediaLive.Types.Eac3LfeControl
        , Network.AWS.MediaLive.Types.Eac3LfeFilter
        , Network.AWS.MediaLive.Types.Eac3MetadataControl
        , Network.AWS.MediaLive.Types.Eac3PassthroughControl
        , Network.AWS.MediaLive.Types.Eac3PhaseControl
        , Network.AWS.MediaLive.Types.Eac3Settings
        , Network.AWS.MediaLive.Types.Eac3StereoDownmix
        , Network.AWS.MediaLive.Types.Eac3SurroundExMode
        , Network.AWS.MediaLive.Types.Eac3SurroundMode
        , Network.AWS.MediaLive.Types.EmbeddedConvert608To708
        , Network.AWS.MediaLive.Types.EmbeddedDestinationSettings
        , Network.AWS.MediaLive.Types.EmbeddedPlusScte20DestinationSettings
        , Network.AWS.MediaLive.Types.EmbeddedScte20Detection
        , Network.AWS.MediaLive.Types.EmbeddedSourceSettings
        , Network.AWS.MediaLive.Types.EncoderSettings
        , Network.AWS.MediaLive.Types.FecOutputIncludeFec
        , Network.AWS.MediaLive.Types.FecOutputSettings
        , Network.AWS.MediaLive.Types.FixedAfd
        , Network.AWS.MediaLive.Types.GlobalConfiguration
        , Network.AWS.MediaLive.Types.GlobalConfigurationInputEndAction
        , Network.AWS.MediaLive.Types.GlobalConfigurationLowFramerateInputs
        , Network.AWS.MediaLive.Types.GlobalConfigurationOutputTimingSource
        , Network.AWS.MediaLive.Types.H264AdaptiveQuantization
        , Network.AWS.MediaLive.Types.H264ColorMetadata
        , Network.AWS.MediaLive.Types.H264EntropyEncoding
        , Network.AWS.MediaLive.Types.H264FlickerAq
        , Network.AWS.MediaLive.Types.H264FramerateControl
        , Network.AWS.MediaLive.Types.H264GopBReference
        , Network.AWS.MediaLive.Types.H264GopSizeUnits
        , Network.AWS.MediaLive.Types.H264Level
        , Network.AWS.MediaLive.Types.H264LookAheadRateControl
        , Network.AWS.MediaLive.Types.H264ParControl
        , Network.AWS.MediaLive.Types.H264Profile
        , Network.AWS.MediaLive.Types.H264RateControlMode
        , Network.AWS.MediaLive.Types.H264ScanType
        , Network.AWS.MediaLive.Types.H264SceneChangeDetect
        , Network.AWS.MediaLive.Types.H264Settings
        , Network.AWS.MediaLive.Types.H264SpatialAq
        , Network.AWS.MediaLive.Types.H264Syntax
        , Network.AWS.MediaLive.Types.H264TemporalAq
        , Network.AWS.MediaLive.Types.H264TimecodeInsertionBehavior
        , Network.AWS.MediaLive.Types.HlsAdMarkers
        , Network.AWS.MediaLive.Types.HlsAkamaiHTTPTransferMode
        , Network.AWS.MediaLive.Types.HlsAkamaiSettings
        , Network.AWS.MediaLive.Types.HlsBasicPutSettings
        , Network.AWS.MediaLive.Types.HlsCaptionLanguageSetting
        , Network.AWS.MediaLive.Types.HlsCdnSettings
        , Network.AWS.MediaLive.Types.HlsClientCache
        , Network.AWS.MediaLive.Types.HlsCodecSpecification
        , Network.AWS.MediaLive.Types.HlsDirectoryStructure
        , Network.AWS.MediaLive.Types.HlsEncryptionType
        , Network.AWS.MediaLive.Types.HlsGroupSettings
        , Network.AWS.MediaLive.Types.HlsInputSettings
        , Network.AWS.MediaLive.Types.HlsIvInManifest
        , Network.AWS.MediaLive.Types.HlsIvSource
        , Network.AWS.MediaLive.Types.HlsManifestCompression
        , Network.AWS.MediaLive.Types.HlsManifestDurationFormat
        , Network.AWS.MediaLive.Types.HlsMediaStoreSettings
        , Network.AWS.MediaLive.Types.HlsMediaStoreStorageClass
        , Network.AWS.MediaLive.Types.HlsMode
        , Network.AWS.MediaLive.Types.HlsOutputSelection
        , Network.AWS.MediaLive.Types.HlsOutputSettings
        , Network.AWS.MediaLive.Types.HlsProgramDateTime
        , Network.AWS.MediaLive.Types.HlsSegmentationMode
        , Network.AWS.MediaLive.Types.HlsSettings
        , Network.AWS.MediaLive.Types.HlsStreamInfResolution
        , Network.AWS.MediaLive.Types.HlsTimedMetadataId3Frame
        , Network.AWS.MediaLive.Types.HlsTsFileMode
        , Network.AWS.MediaLive.Types.HlsWebdavHTTPTransferMode
        , Network.AWS.MediaLive.Types.HlsWebdavSettings
        , Network.AWS.MediaLive.Types.Input
        , Network.AWS.MediaLive.Types.InputAttachment
        , Network.AWS.MediaLive.Types.InputChannelLevel
        , Network.AWS.MediaLive.Types.InputCodec
        , Network.AWS.MediaLive.Types.InputDeblockFilter
        , Network.AWS.MediaLive.Types.InputDenoiseFilter
        , Network.AWS.MediaLive.Types.InputDestination
        , Network.AWS.MediaLive.Types.InputDestinationRequest
        , Network.AWS.MediaLive.Types.InputFilter
        , Network.AWS.MediaLive.Types.InputLocation
        , Network.AWS.MediaLive.Types.InputLossActionForHlsOut
        , Network.AWS.MediaLive.Types.InputLossActionForMsSmoothOut
        , Network.AWS.MediaLive.Types.InputLossActionForUdpOut
        , Network.AWS.MediaLive.Types.InputLossBehavior
        , Network.AWS.MediaLive.Types.InputLossImageType
        , Network.AWS.MediaLive.Types.InputMaximumBitrate
        , Network.AWS.MediaLive.Types.InputResolution
        , Network.AWS.MediaLive.Types.InputSecurityGroup
        , Network.AWS.MediaLive.Types.InputSecurityGroupState
        , Network.AWS.MediaLive.Types.InputSettings
        , Network.AWS.MediaLive.Types.InputSource
        , Network.AWS.MediaLive.Types.InputSourceEndBehavior
        , Network.AWS.MediaLive.Types.InputSourceRequest
        , Network.AWS.MediaLive.Types.InputSpecification
        , Network.AWS.MediaLive.Types.InputState
        , Network.AWS.MediaLive.Types.InputType
        , Network.AWS.MediaLive.Types.InputWhitelistRule
        , Network.AWS.MediaLive.Types.InputWhitelistRuleCidr
        , Network.AWS.MediaLive.Types.KeyProviderSettings
        , Network.AWS.MediaLive.Types.M2tsAbsentInputAudioBehavior
        , Network.AWS.MediaLive.Types.M2tsArib
        , Network.AWS.MediaLive.Types.M2tsAribCaptionsPidControl
        , Network.AWS.MediaLive.Types.M2tsAudioBufferModel
        , Network.AWS.MediaLive.Types.M2tsAudioInterval
        , Network.AWS.MediaLive.Types.M2tsAudioStreamType
        , Network.AWS.MediaLive.Types.M2tsBufferModel
        , Network.AWS.MediaLive.Types.M2tsCCDescriptor
        , Network.AWS.MediaLive.Types.M2tsEbifControl
        , Network.AWS.MediaLive.Types.M2tsEbpPlacement
        , Network.AWS.MediaLive.Types.M2tsEsRateInPes
        , Network.AWS.MediaLive.Types.M2tsKlv
        , Network.AWS.MediaLive.Types.M2tsPcrControl
        , Network.AWS.MediaLive.Types.M2tsRateMode
        , Network.AWS.MediaLive.Types.M2tsScte35Control
        , Network.AWS.MediaLive.Types.M2tsSegmentationMarkers
        , Network.AWS.MediaLive.Types.M2tsSegmentationStyle
        , Network.AWS.MediaLive.Types.M2tsSettings
        , Network.AWS.MediaLive.Types.M2tsTimedMetadataBehavior
        , Network.AWS.MediaLive.Types.M3u8PcrControl
        , Network.AWS.MediaLive.Types.M3u8Scte35Behavior
        , Network.AWS.MediaLive.Types.M3u8Settings
        , Network.AWS.MediaLive.Types.M3u8TimedMetadataBehavior
        , Network.AWS.MediaLive.Types.Mp2CodingMode
        , Network.AWS.MediaLive.Types.Mp2Settings
        , Network.AWS.MediaLive.Types.MsSmoothGroupSettings
        , Network.AWS.MediaLive.Types.MsSmoothOutputSettings
        , Network.AWS.MediaLive.Types.NetworkInputServerValidation
        , Network.AWS.MediaLive.Types.NetworkInputSettings
        , Network.AWS.MediaLive.Types.Output
        , Network.AWS.MediaLive.Types.OutputDestination
        , Network.AWS.MediaLive.Types.OutputDestinationSettings
        , Network.AWS.MediaLive.Types.OutputGroup
        , Network.AWS.MediaLive.Types.OutputGroupSettings
        , Network.AWS.MediaLive.Types.OutputLocationRef
        , Network.AWS.MediaLive.Types.OutputSettings
        , Network.AWS.MediaLive.Types.PassThroughSettings
        , Network.AWS.MediaLive.Types.Product
        , Network.AWS.MediaLive.Types.RemixSettings
        , Network.AWS.MediaLive.Types.RtmpCacheFullBehavior
        , Network.AWS.MediaLive.Types.RtmpCaptionData
        , Network.AWS.MediaLive.Types.RtmpCaptionInfoDestinationSettings
        , Network.AWS.MediaLive.Types.RtmpGroupSettings
        , Network.AWS.MediaLive.Types.RtmpOutputCertificateMode
        , Network.AWS.MediaLive.Types.RtmpOutputSettings
        , Network.AWS.MediaLive.Types.Scte20Convert608To708
        , Network.AWS.MediaLive.Types.Scte20PlusEmbeddedDestinationSettings
        , Network.AWS.MediaLive.Types.Scte20SourceSettings
        , Network.AWS.MediaLive.Types.Scte27DestinationSettings
        , Network.AWS.MediaLive.Types.Scte27SourceSettings
        , Network.AWS.MediaLive.Types.Scte35AposNoRegionalBlackoutBehavior
        , Network.AWS.MediaLive.Types.Scte35AposWebDeliveryAllowedBehavior
        , Network.AWS.MediaLive.Types.Scte35SpliceInsert
        , Network.AWS.MediaLive.Types.Scte35SpliceInsertNoRegionalBlackoutBehavior
        , Network.AWS.MediaLive.Types.Scte35SpliceInsertWebDeliveryAllowedBehavior
        , Network.AWS.MediaLive.Types.Scte35TimeSignalApos
        , Network.AWS.MediaLive.Types.SmoothGroupAudioOnlyTimecodeControl
        , Network.AWS.MediaLive.Types.SmoothGroupCertificateMode
        , Network.AWS.MediaLive.Types.SmoothGroupEventIdMode
        , Network.AWS.MediaLive.Types.SmoothGroupEventStopBehavior
        , Network.AWS.MediaLive.Types.SmoothGroupSegmentationMode
        , Network.AWS.MediaLive.Types.SmoothGroupSparseTrackType
        , Network.AWS.MediaLive.Types.SmoothGroupStreamManifestBehavior
        , Network.AWS.MediaLive.Types.SmoothGroupTimestampOffsetMode
        , Network.AWS.MediaLive.Types.SmpteTtDestinationSettings
        , Network.AWS.MediaLive.Types.StandardHlsSettings
        , Network.AWS.MediaLive.Types.StaticKeySettings
        , Network.AWS.MediaLive.Types.TeletextDestinationSettings
        , Network.AWS.MediaLive.Types.TeletextSourceSettings
        , Network.AWS.MediaLive.Types.TimecodeConfig
        , Network.AWS.MediaLive.Types.TimecodeConfigSource
        , Network.AWS.MediaLive.Types.TtmlDestinationSettings
        , Network.AWS.MediaLive.Types.TtmlDestinationStyleControl
        , Network.AWS.MediaLive.Types.UdpContainerSettings
        , Network.AWS.MediaLive.Types.UdpGroupSettings
        , Network.AWS.MediaLive.Types.UdpOutputSettings
        , Network.AWS.MediaLive.Types.UdpTimedMetadataId3Frame
        , Network.AWS.MediaLive.Types.VideoCodecSettings
        , Network.AWS.MediaLive.Types.VideoDescription
        , Network.AWS.MediaLive.Types.VideoDescriptionRespondToAfd
        , Network.AWS.MediaLive.Types.VideoDescriptionScalingBehavior
        , Network.AWS.MediaLive.Types.VideoSelector
        , Network.AWS.MediaLive.Types.VideoSelectorColorSpace
        , Network.AWS.MediaLive.Types.VideoSelectorColorSpaceUsage
        , Network.AWS.MediaLive.Types.VideoSelectorPid
        , Network.AWS.MediaLive.Types.VideoSelectorProgramId
        , Network.AWS.MediaLive.Types.VideoSelectorSettings
        , Network.AWS.MediaLive.Types.WebvttDestinationSettings

    build-depends:
          amazonka-core == 1.6.1.*
        , base          >= 4.7     && < 5
        , case-insensitive

test-suite amazonka-medialive-test
    type:              exitcode-stdio-1.0
    default-language:  Haskell2010
    hs-source-dirs:    test
    main-is:           Main.hs

    ghc-options:       -Wall -threaded

    -- This section is encoded by the template and any modules added by
    -- hand outside these namespaces will not correctly be added to the
    -- distribution package.
    other-modules:
          Test.AWS.MediaLive
        , Test.AWS.Gen.MediaLive
        , Test.AWS.MediaLive.Internal

    build-depends:
          amazonka-core == 1.6.1.*
        , amazonka-test == 1.6.1.*
        , amazonka-medialive
        , base
        , bytestring
        , case-insensitive
        , tasty
        , tasty-hunit
        , text
        , time
        , unordered-containers
