name:                  amazonka-pinpoint
version:               1.6.1
synopsis:              Amazon Pinpoint SDK.
homepage:              https://github.com/brendanhay/amazonka
bug-reports:           https://github.com/brendanhay/amazonka/issues
license:               MPL-2.0
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay+amazonka@gmail.com>
copyright:             Copyright (c) 2013-2018 Brendan Hay
category:              Network, AWS, Cloud, Distributed Computing
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md fixture/*.yaml fixture/*.proto src/.gitkeep
description:
    The types from this library are intended to be used with
    <http://hackage.haskell.org/package/amazonka amazonka>, which provides
    mechanisms for specifying AuthN/AuthZ information, sending requests,
    and receiving responses.
    .
    Lenses are used for constructing and manipulating types,
    due to the depth of nesting of AWS types and transparency regarding
    de/serialisation into more palatable Haskell values.
    The provided lenses should be compatible with any of the major lens libraries
    such as <http://hackage.haskell.org/package/lens lens> or
    <http://hackage.haskell.org/package/lens-family-core lens-family-core>.
    .
    See "Network.AWS.Pinpoint" or <https://aws.amazon.com/documentation/ the AWS documentation>
    to get started.

source-repository head
    type:              git
    location:          git://github.com/brendanhay/amazonka.git
    subdir:            amazonka-pinpoint

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:
        -Wall
        -fwarn-incomplete-uni-patterns
        -fwarn-incomplete-record-updates
        -funbox-strict-fields

    exposed-modules:
          Network.AWS.Pinpoint
        , Network.AWS.Pinpoint.CreateApp
        , Network.AWS.Pinpoint.CreateCampaign
        , Network.AWS.Pinpoint.CreateExportJob
        , Network.AWS.Pinpoint.CreateImportJob
        , Network.AWS.Pinpoint.CreateSegment
        , Network.AWS.Pinpoint.DeleteADMChannel
        , Network.AWS.Pinpoint.DeleteAPNSChannel
        , Network.AWS.Pinpoint.DeleteAPNSSandboxChannel
        , Network.AWS.Pinpoint.DeleteAPNSVoipChannel
        , Network.AWS.Pinpoint.DeleteAPNSVoipSandboxChannel
        , Network.AWS.Pinpoint.DeleteApp
        , Network.AWS.Pinpoint.DeleteBaiduChannel
        , Network.AWS.Pinpoint.DeleteCampaign
        , Network.AWS.Pinpoint.DeleteEmailChannel
        , Network.AWS.Pinpoint.DeleteEndpoint
        , Network.AWS.Pinpoint.DeleteEventStream
        , Network.AWS.Pinpoint.DeleteGCMChannel
        , Network.AWS.Pinpoint.DeleteSegment
        , Network.AWS.Pinpoint.DeleteSmsChannel
        , Network.AWS.Pinpoint.GetADMChannel
        , Network.AWS.Pinpoint.GetAPNSChannel
        , Network.AWS.Pinpoint.GetAPNSSandboxChannel
        , Network.AWS.Pinpoint.GetAPNSVoipChannel
        , Network.AWS.Pinpoint.GetAPNSVoipSandboxChannel
        , Network.AWS.Pinpoint.GetApp
        , Network.AWS.Pinpoint.GetApplicationSettings
        , Network.AWS.Pinpoint.GetApps
        , Network.AWS.Pinpoint.GetBaiduChannel
        , Network.AWS.Pinpoint.GetCampaign
        , Network.AWS.Pinpoint.GetCampaignActivities
        , Network.AWS.Pinpoint.GetCampaignVersion
        , Network.AWS.Pinpoint.GetCampaignVersions
        , Network.AWS.Pinpoint.GetCampaigns
        , Network.AWS.Pinpoint.GetEmailChannel
        , Network.AWS.Pinpoint.GetEndpoint
        , Network.AWS.Pinpoint.GetEventStream
        , Network.AWS.Pinpoint.GetExportJob
        , Network.AWS.Pinpoint.GetExportJobs
        , Network.AWS.Pinpoint.GetGCMChannel
        , Network.AWS.Pinpoint.GetImportJob
        , Network.AWS.Pinpoint.GetImportJobs
        , Network.AWS.Pinpoint.GetSegment
        , Network.AWS.Pinpoint.GetSegmentExportJobs
        , Network.AWS.Pinpoint.GetSegmentImportJobs
        , Network.AWS.Pinpoint.GetSegmentVersion
        , Network.AWS.Pinpoint.GetSegmentVersions
        , Network.AWS.Pinpoint.GetSegments
        , Network.AWS.Pinpoint.GetSmsChannel
        , Network.AWS.Pinpoint.PutEventStream
        , Network.AWS.Pinpoint.SendMessages
        , Network.AWS.Pinpoint.SendUsersMessages
        , Network.AWS.Pinpoint.Types
        , Network.AWS.Pinpoint.UpdateADMChannel
        , Network.AWS.Pinpoint.UpdateAPNSChannel
        , Network.AWS.Pinpoint.UpdateAPNSSandboxChannel
        , Network.AWS.Pinpoint.UpdateAPNSVoipChannel
        , Network.AWS.Pinpoint.UpdateAPNSVoipSandboxChannel
        , Network.AWS.Pinpoint.UpdateApplicationSettings
        , Network.AWS.Pinpoint.UpdateBaiduChannel
        , Network.AWS.Pinpoint.UpdateCampaign
        , Network.AWS.Pinpoint.UpdateEmailChannel
        , Network.AWS.Pinpoint.UpdateEndpoint
        , Network.AWS.Pinpoint.UpdateEndpointsBatch
        , Network.AWS.Pinpoint.UpdateGCMChannel
        , Network.AWS.Pinpoint.UpdateSegment
        , Network.AWS.Pinpoint.UpdateSmsChannel
        , Network.AWS.Pinpoint.Waiters

    other-modules:
          Network.AWS.Pinpoint.Types.ADMChannelRequest
        , Network.AWS.Pinpoint.Types.ADMChannelResponse
        , Network.AWS.Pinpoint.Types.ADMMessage
        , Network.AWS.Pinpoint.Types.APNSChannelRequest
        , Network.AWS.Pinpoint.Types.APNSChannelResponse
        , Network.AWS.Pinpoint.Types.APNSMessage
        , Network.AWS.Pinpoint.Types.APNSSandboxChannelRequest
        , Network.AWS.Pinpoint.Types.APNSSandboxChannelResponse
        , Network.AWS.Pinpoint.Types.APNSVoipChannelRequest
        , Network.AWS.Pinpoint.Types.APNSVoipChannelResponse
        , Network.AWS.Pinpoint.Types.APNSVoipSandboxChannelRequest
        , Network.AWS.Pinpoint.Types.APNSVoipSandboxChannelResponse
        , Network.AWS.Pinpoint.Types.Action
        , Network.AWS.Pinpoint.Types.ActivitiesResponse
        , Network.AWS.Pinpoint.Types.ActivityResponse
        , Network.AWS.Pinpoint.Types.AddressConfiguration
        , Network.AWS.Pinpoint.Types.ApplicationResponse
        , Network.AWS.Pinpoint.Types.ApplicationSettingsResource
        , Network.AWS.Pinpoint.Types.ApplicationsResponse
        , Network.AWS.Pinpoint.Types.AttributeDimension
        , Network.AWS.Pinpoint.Types.AttributeType
        , Network.AWS.Pinpoint.Types.BaiduChannelRequest
        , Network.AWS.Pinpoint.Types.BaiduChannelResponse
        , Network.AWS.Pinpoint.Types.BaiduMessage
        , Network.AWS.Pinpoint.Types.CampaignEmailMessage
        , Network.AWS.Pinpoint.Types.CampaignHook
        , Network.AWS.Pinpoint.Types.CampaignLimits
        , Network.AWS.Pinpoint.Types.CampaignResponse
        , Network.AWS.Pinpoint.Types.CampaignSmsMessage
        , Network.AWS.Pinpoint.Types.CampaignState
        , Network.AWS.Pinpoint.Types.CampaignStatus
        , Network.AWS.Pinpoint.Types.CampaignsResponse
        , Network.AWS.Pinpoint.Types.ChannelType
        , Network.AWS.Pinpoint.Types.CreateApplicationRequest
        , Network.AWS.Pinpoint.Types.DefaultMessage
        , Network.AWS.Pinpoint.Types.DefaultPushNotificationMessage
        , Network.AWS.Pinpoint.Types.DefinitionFormat
        , Network.AWS.Pinpoint.Types.DeliveryStatus
        , Network.AWS.Pinpoint.Types.DimensionType
        , Network.AWS.Pinpoint.Types.DirectMessageConfiguration
        , Network.AWS.Pinpoint.Types.Duration
        , Network.AWS.Pinpoint.Types.EmailChannelRequest
        , Network.AWS.Pinpoint.Types.EmailChannelResponse
        , Network.AWS.Pinpoint.Types.EndpointBatchItem
        , Network.AWS.Pinpoint.Types.EndpointBatchRequest
        , Network.AWS.Pinpoint.Types.EndpointDemographic
        , Network.AWS.Pinpoint.Types.EndpointLocation
        , Network.AWS.Pinpoint.Types.EndpointMessageResult
        , Network.AWS.Pinpoint.Types.EndpointRequest
        , Network.AWS.Pinpoint.Types.EndpointResponse
        , Network.AWS.Pinpoint.Types.EndpointSendConfiguration
        , Network.AWS.Pinpoint.Types.EndpointUser
        , Network.AWS.Pinpoint.Types.EventStream
        , Network.AWS.Pinpoint.Types.ExportJobRequest
        , Network.AWS.Pinpoint.Types.ExportJobResource
        , Network.AWS.Pinpoint.Types.ExportJobResponse
        , Network.AWS.Pinpoint.Types.ExportJobsResponse
        , Network.AWS.Pinpoint.Types.Frequency
        , Network.AWS.Pinpoint.Types.GCMChannelRequest
        , Network.AWS.Pinpoint.Types.GCMChannelResponse
        , Network.AWS.Pinpoint.Types.GCMMessage
        , Network.AWS.Pinpoint.Types.ImportJobRequest
        , Network.AWS.Pinpoint.Types.ImportJobResource
        , Network.AWS.Pinpoint.Types.ImportJobResponse
        , Network.AWS.Pinpoint.Types.ImportJobsResponse
        , Network.AWS.Pinpoint.Types.JobStatus
        , Network.AWS.Pinpoint.Types.Message
        , Network.AWS.Pinpoint.Types.MessageBody
        , Network.AWS.Pinpoint.Types.MessageConfiguration
        , Network.AWS.Pinpoint.Types.MessageRequest
        , Network.AWS.Pinpoint.Types.MessageResponse
        , Network.AWS.Pinpoint.Types.MessageResult
        , Network.AWS.Pinpoint.Types.MessageType
        , Network.AWS.Pinpoint.Types.Mode
        , Network.AWS.Pinpoint.Types.Product
        , Network.AWS.Pinpoint.Types.QuietTime
        , Network.AWS.Pinpoint.Types.RecencyDimension
        , Network.AWS.Pinpoint.Types.RecencyType
        , Network.AWS.Pinpoint.Types.SMSChannelRequest
        , Network.AWS.Pinpoint.Types.SMSChannelResponse
        , Network.AWS.Pinpoint.Types.SMSMessage
        , Network.AWS.Pinpoint.Types.Schedule
        , Network.AWS.Pinpoint.Types.SegmentBehaviors
        , Network.AWS.Pinpoint.Types.SegmentDemographics
        , Network.AWS.Pinpoint.Types.SegmentDimensions
        , Network.AWS.Pinpoint.Types.SegmentImportResource
        , Network.AWS.Pinpoint.Types.SegmentLocation
        , Network.AWS.Pinpoint.Types.SegmentResponse
        , Network.AWS.Pinpoint.Types.SegmentType
        , Network.AWS.Pinpoint.Types.SegmentsResponse
        , Network.AWS.Pinpoint.Types.SendUsersMessageRequest
        , Network.AWS.Pinpoint.Types.SendUsersMessageResponse
        , Network.AWS.Pinpoint.Types.SetDimension
        , Network.AWS.Pinpoint.Types.TreatmentResource
        , Network.AWS.Pinpoint.Types.WriteApplicationSettingsRequest
        , Network.AWS.Pinpoint.Types.WriteCampaignRequest
        , Network.AWS.Pinpoint.Types.WriteEventStream
        , Network.AWS.Pinpoint.Types.WriteSegmentRequest
        , Network.AWS.Pinpoint.Types.WriteTreatmentResource

    build-depends:
          amazonka-core == 1.6.1.*
        , base          >= 4.7     && < 5
        , case-insensitive

test-suite amazonka-pinpoint-test
    type:              exitcode-stdio-1.0
    default-language:  Haskell2010
    hs-source-dirs:    test
    main-is:           Main.hs

    ghc-options:       -Wall -threaded

    -- This section is encoded by the template and any modules added by
    -- hand outside these namespaces will not correctly be added to the
    -- distribution package.
    other-modules:
          Test.AWS.Pinpoint
        , Test.AWS.Gen.Pinpoint
        , Test.AWS.Pinpoint.Internal

    build-depends:
          amazonka-core == 1.6.1.*
        , amazonka-test == 1.6.1.*
        , amazonka-pinpoint
        , base
        , bytestring
        , case-insensitive
        , tasty
        , tasty-hunit
        , text
        , time
        , unordered-containers
