name:                  amazonka-polly
version:               1.6.1
synopsis:              Amazon Polly SDK.
homepage:              https://github.com/brendanhay/amazonka
bug-reports:           https://github.com/brendanhay/amazonka/issues
license:               MPL-2.0
license-file:          LICENSE
author:                Brendan Hay
maintainer:            Brendan Hay <brendan.g.hay+amazonka@gmail.com>
copyright:             Copyright (c) 2013-2018 Brendan Hay
category:              Network, AWS, Cloud, Distributed Computing
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md fixture/*.yaml fixture/*.proto src/.gitkeep
description:
    The types from this library are intended to be used with
    <http://hackage.haskell.org/package/amazonka amazonka>, which provides
    mechanisms for specifying AuthN/AuthZ information, sending requests,
    and receiving responses.
    .
    Lenses are used for constructing and manipulating types,
    due to the depth of nesting of AWS types and transparency regarding
    de/serialisation into more palatable Haskell values.
    The provided lenses should be compatible with any of the major lens libraries
    such as <http://hackage.haskell.org/package/lens lens> or
    <http://hackage.haskell.org/package/lens-family-core lens-family-core>.
    .
    See "Network.AWS.Polly" or <https://aws.amazon.com/documentation/ the AWS documentation>
    to get started.

source-repository head
    type:              git
    location:          git://github.com/brendanhay/amazonka.git
    subdir:            amazonka-polly

library
    default-language:  Haskell2010
    hs-source-dirs:    src gen

    ghc-options:
        -Wall
        -fwarn-incomplete-uni-patterns
        -fwarn-incomplete-record-updates
        -funbox-strict-fields

    exposed-modules:
          Network.AWS.Polly
        , Network.AWS.Polly.DeleteLexicon
        , Network.AWS.Polly.DescribeVoices
        , Network.AWS.Polly.GetLexicon
        , Network.AWS.Polly.ListLexicons
        , Network.AWS.Polly.PutLexicon
        , Network.AWS.Polly.SynthesizeSpeech
        , Network.AWS.Polly.Types
        , Network.AWS.Polly.Waiters

    other-modules:
          Network.AWS.Polly.Types.Gender
        , Network.AWS.Polly.Types.LanguageCode
        , Network.AWS.Polly.Types.Lexicon
        , Network.AWS.Polly.Types.LexiconAttributes
        , Network.AWS.Polly.Types.LexiconDescription
        , Network.AWS.Polly.Types.OutputFormat
        , Network.AWS.Polly.Types.Product
        , Network.AWS.Polly.Types.SpeechMarkType
        , Network.AWS.Polly.Types.TextType
        , Network.AWS.Polly.Types.Voice
        , Network.AWS.Polly.Types.VoiceId

    build-depends:
          amazonka-core == 1.6.1.*
        , base          >= 4.7     && < 5
        , case-insensitive

test-suite amazonka-polly-test
    type:              exitcode-stdio-1.0
    default-language:  Haskell2010
    hs-source-dirs:    test
    main-is:           Main.hs

    ghc-options:       -Wall -threaded

    -- This section is encoded by the template and any modules added by
    -- hand outside these namespaces will not correctly be added to the
    -- distribution package.
    other-modules:
          Test.AWS.Polly
        , Test.AWS.Gen.Polly
        , Test.AWS.Polly.Internal

    build-depends:
          amazonka-core == 1.6.1.*
        , amazonka-test == 1.6.1.*
        , amazonka-polly
        , base
        , bytestring
        , case-insensitive
        , tasty
        , tasty-hunit
        , text
        , time
        , unordered-containers
